--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.7.0",
     "@schematics/angular": "^11.2.0",
     "bootstrap": "^5.0.0-beta2",
+    "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^13.2.0",
